# deskpet

./: .env.example  .gitignore  CODE_REVIEW_REPORT.md  FINAL_REPORT.md  FIXES_IMPLEMENTED.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
docs/: acceptance.md  api.md
frontend/: vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: ChatPanel.tsx  Controls.tsx  PetAvatar.tsx  TodoPanel.tsx
frontend/src/hooks/: useSession.ts
frontend/src/styles/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20260310230000_init.sql  20260311093000_add_reminder_logs.sql  20260323_add_indexes.sql
src-tauri/src/: chat.rs  commands.rs  db.rs  lib.rs  llm.rs  models.rs  persona.rs  reminder.rs  self_talk.rs  state.rs  system_action.rs  todo.rs
tests/: acceptance_checklist.md
